--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
+				<p><strong>🎉🎉🎉</strong></p>
 				<p>Hi Ma Jue Jue .....  </p>
 				<p><strong>お誕生日</strong></p>
-				<p><strong>おめでとうございます！🎉🎂</strong></p>
+				<p><strong>おめでとうございます！</strong></p>
+				
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
